build: depend on correct file
Otherwise, VPATH builds fail with:

make[1]: *** No rule to make target `libvirt-guests.init', needed by `all'.

Regression introduced in commit 482e08a9.

* daemon/Makefile.am (%.init): Look in correct place for
config.status.

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -239,7 +239,7 @@ uninstall-init:
 
 BUILT_SOURCES += libvirtd.init libvirt-guests.init
 
-%.init: %.init.in $(top_srcdir)/config.status
+%.init: %.init.in $(top_builddir)/config.status
 	$(AM_V_GEN)sed					\
 	    -e s!\@localstatedir\@!@localstatedir@!g	\
 	    -e s!\@sbindir\@!@sbindir@!g		\
