Fix build by removing unknown pod2man flag
Some versions of pod2man do not support the -u flag, so this
can't be used

* daemon/Makefile.am: Remove -u flag from pod2man

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -54,7 +54,7 @@ augeastestsdir = $(datadir)/augeas/lenses/tests
 augeastests_DATA = test_libvirtd.aug
 
 POD2MAN = pod2man -c "Virtualization Support" \
-			-r "$(PACKAGE)-$(VERSION)" -s 8 -u
+			-r "$(PACKAGE)-$(VERSION)" -s 8
 
 libvirtd.pod: libvirtd.pod.in
 	sed \
